--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=91431e1b0bcda74ee6509e83f0774645
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:0000@127.0.0.1:3307/e_city_final?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/e_city_final?serverVersion=8&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
