--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/orm": "^2.10",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.26",
+        "stof/doctrine-extensions-bundle": "*",
         "symfony/asset": "^5.4",
         "symfony/console": "^5.4",
         "symfony/doctrine-messenger": "^5.4",
