--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+app_client_new:
+    path: '/client/new'
+    controller: 'App\Controller\ClientController::new'
+    methods: ['GET', 'POST']
