--- a/config/packages/validator.yaml
+++ b/config/packages/validator.yaml
@@ -4,8 +4,10 @@ framework:
 
         # Enables validator auto-mapping support.
         # For instance, basic validation constraints will be inferred from Doctrine's metadata.
-        #auto_mapping:
+        auto_mapping:
         #    App\Entity\: []
+    # config/validator/validation.yaml
+           
 
 when@test:
     framework:
