doctor by speciality comobobox

--- a/.env
+++ b/.env
@@ -27,6 +27,7 @@ APP_SECRET=91431e1b0bcda74ee6509e83f0774645
 
 
 
+# DATABASE_URL="mysql://root:0000@192.168.235.209:3306/e_city_final?serverVersion=10.5.8-MariaDB"
 DATABASE_URL="mysql://root:0000@127.0.0.1:3307/e_city_final?serverVersion=10.5.8-MariaDB"
 
 
