--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,6 +13,9 @@ security:
         main:
             lazy: true
             provider: users_in_memory
+    encoders:
+        App\Entity\Personne:
+            algorithm: bcrypt
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
