--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+app_sms:
+    path: '/sms'
+    controller: 'App\Controller\SmsController::sendSms'
+    methods: ['GET', 'POST']
