--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "symfony/mailer": "^5.4",
         "symfony/mime": "^5.4",
         "symfony/monolog-bundle": "^3.0",
-        "symfony/notifier": "^5.4",
+        "symfony/notifier": "5.4.*",
         "symfony/process": "^5.4",
         "symfony/property-access": "^5.4",
         "symfony/property-info": "^5.4",
@@ -39,13 +39,15 @@
         "symfony/string": "^5.4",
         "symfony/translation": "^5.4",
         "symfony/twig-bundle": "^5.4",
+        "symfony/twilio-notifier": "5.4.*",
         "symfony/ux-turbo": "^2.16",
         "symfony/validator": "5.4.*",
         "symfony/web-link": "^5.4",
         "symfony/yaml": "^5.4",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/intl-extra": "^3.8",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "twilio/sdk": "^8.0"
     },
     "config": {
         "allow-plugins": {
