CRUD done + Control of input

--- a/.env
+++ b/.env
@@ -43,11 +43,11 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
-TWILIO_DSN=twilio://ACb7699b0b6314abd7941be7a60f5822b5:3ad9363b31ec95b4ed631478c263acd1@default?from=+19784867818
+TWILIO_DSN=#
 
-twilio_account_sid=ACb7699b0b6314abd7941be7a60f5822b5
-twilio_auth_token=3ad9363b31ec95b4ed631478c263acd1
-twilio_from_number=+19784867818
+twilio_account_sid=#
+twilio_auth_token=#
+twilio_from_number=#
 
 
 
