--- a/.env
+++ b/.env
@@ -43,16 +43,41 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
-TWILIO_DSN=#
+TWILIO_DSN=twilio://ACb7699b0b6314abd7941be7a60f5822b5:e8cc5919b361319958f8ba51e1bafada@default?from=+19784867818
 
-twilio_account_sid=#
-twilio_auth_token=#
-twilio_from_number=#
+twilio_account_sid=ACb7699b0b6314abd7941be7a60f5822b5
+twilio_auth_token=e8cc5919b361319958f8ba51e1bafada
+twilio_from_number=+19784867818
+
 
 
 
 ###< symfony/mailer ###
+# MAILER_DSN=smtp://api:1bddcd4b0aa25aea8feae0c90ddba0d5@live.smtp.mailtrap.io:587/?encryption=ssl&auth_mode=login
+MAILER_DSN=smtp://testpi3a8@outlook.com:0123456789aKar@smtp.office365.com:587?encryption=starttls&auth_mode=login
+
 
 ###> symfony/twilio-notifier ###
 # TWILIO_DSN=twilio://SID:TOKEN@default?from=FROM
 ###< symfony/twilio-notifier ###
+
+
+
+###> symfony/postmark-mailer ###
+# MAILER_DSN=postmark+api://Ke729cf9c-e73a-4e81-a784-6f3ae6e2253fEY@default
+###< symfony/postmark-mailer ###
+
+###> symfony/amazon-mailer ###
+# MAILER_DSN=ses://ACCESS_KEY:SECRET_KEY@default?region=eu-west-1
+# MAILER_DSN=ses+smtp://ACCESS_KEY:SECRET_KEY@default?region=eu-west-1
+###< symfony/amazon-mailer ###
+
+###> symfony/mailchimp-mailer ###
+# MAILER_DSN=mandrill://KEY@default
+# MAILER_DSN=mandrill+smtp://USERNAME:PASSWORD@default
+###< symfony/mailchimp-mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
