--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,11 @@
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.8",
+        "knplabs/knp-paginator-bundle": "^5.9",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.26",
         "sensio/framework-extra-bundle": "^6.0",
+        "symfony/amazon-mailer": "5.4.*",
         "symfony/asset": "^5.4",
         "symfony/console": "^5.4",
         "symfony/doctrine-messenger": "^5.4",
@@ -23,17 +25,21 @@
         "symfony/flex": "^1.17|^2",
         "symfony/form": "5.4.*",
         "symfony/framework-bundle": "^5.4",
+        "symfony/google-mailer": "5.4.*",
         "symfony/http-client": "^5.4",
         "symfony/intl": "^5.4",
-        "symfony/mailer": "^5.4",
+        "symfony/mailchimp-mailer": "5.4.*",
+        "symfony/mailer": "5.4.*",
         "symfony/mime": "^5.4",
         "symfony/monolog-bundle": "^3.0",
         "symfony/notifier": "5.4.*",
+        "symfony/postmark-mailer": "5.4.*",
         "symfony/process": "^5.4",
         "symfony/property-access": "^5.4",
         "symfony/property-info": "^5.4",
         "symfony/runtime": "^5.4",
         "symfony/security-bundle": "^5.4",
+        "symfony/sendgrid-mailer": "5.4.*",
         "symfony/serializer": "^5.4",
         "symfony/stimulus-bundle": "^2.16",
         "symfony/string": "^5.4",
