--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.10",
+        "dompdf/dompdf": "^2.0",
         "knplabs/knp-paginator-bundle": "^5.9",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.26",
@@ -39,12 +40,14 @@
         "symfony/string": "^5.4",
         "symfony/translation": "^5.4",
         "symfony/twig-bundle": "^5.4",
+        "symfony/ux-chartjs": "^2.17",
         "symfony/ux-turbo": "^2.16",
         "symfony/validator": "^5.4",
         "symfony/web-link": "^5.4",
         "symfony/yaml": "^5.4",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "twilio/sdk": "^8.0"
     },
     "config": {
         "allow-plugins": {
