--- a/composer.json
+++ b/composer.json
@@ -7,19 +7,27 @@
         "php": ">=8.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "bacon/bacon-qr-code": "^2.0",
         "doctrine/annotations": "^2.0",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.8",
+        "endroid/qr-code": "^5.0",
+        "endroid/qr-code-bundle": "5.0.0",
+        "endroid/qrcode": "^5.0",
         "imagine/imagine": "^1.3",
+        "knplabs/knp-paginator-bundle": "^5.9",
+        "knplabs/knp-snappy": "^1.5",
+        "knplabs/knp-snappy-bundle": "^1.10",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.26",
         "sensio/framework-extra-bundle": "^6.0",
+        "stripe/stripe-php": "^14.4",
         "symfony/asset": "^5.4",
         "symfony/console": "^5.4",
         "symfony/doctrine-messenger": "^5.4",
-        "symfony/dotenv": "^5.4",
+        "symfony/dotenv": "5.4.*",
         "symfony/expression-language": "^5.4",
         "symfony/flex": "^1.17|^2",
         "symfony/form": "5.4.*",
@@ -53,7 +61,8 @@
             "composer/package-versions-deprecated": true,
             "php-http/discovery": true,
             "symfony/flex": true,
-            "symfony/runtime": true
+            "symfony/runtime": true,
+            "endroid/installer": true
         },
         "optimize-autoloader": true,
         "preferred-install": {
