--- a/.env
+++ b/.env
@@ -38,6 +38,7 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/e-city?serverVersion=8&charset=utf8mb
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+# MESSENGER_TRANSPORT_DSN=async://localhost
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
