--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -6,6 +6,7 @@ framework:
             # https://symfony.com/doc/current/messenger.html#transport-configuration
             async:
                 dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
+                # dsn: 'smtp://f.felhi2016@gmail.com:09727761Feres@smtp.gmail.com:465?encryption=ssl&auth_mode=login'
                 options:
                     use_notify: true
                     check_delayed_interval: 60000
