--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+
+generate_qr_code:
+    path: '/reserveFront'
+    controller: 'App\Controller\PlaceController::reserveFront'
