--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,7 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
 
-    photos_directory: 'public\img'
+    photos_directory: '%kernel.project_dir%/public/img'
 
 
 services:
