--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -16,15 +16,12 @@ framework:
             sync: 'sync://'
 
         routing:
-<<<<<<< HEAD
             # Symfony\Component\Mailer\Messenger\SendEmailMessage: async
             Symfony\Component\Notifier\Message\ChatMessage: async
             Symfony\Component\Notifier\Message\SmsMessage: async
-=======
             Symfony\Component\Mailer\Messenger\SendEmailMessage: sync
-            Symfony\Component\Notifier\Message\ChatMessage: sync
-            Symfony\Component\Notifier\Message\SmsMessage: sync
->>>>>>> 37caec1e37e945f6c482a8a42503aea11ab64dea
+            # Symfony\Component\Notifier\Message\ChatMessage: sync
+            # Symfony\Component\Notifier\Message\SmsMessage: sync
 
             # Route your messages to the transports
             # 'App\Message\YourMessage': async
