--- a/config/packages/notifier.yaml
+++ b/config/packages/notifier.yaml
@@ -2,13 +2,10 @@ framework:
     notifier:
         chatter_transports:
         texter_transports:
-<<<<<<< HEAD
-            postmark: '%env(MAILER_DSN)%'
-            sendgrid: '%env(MAILER_DSN)%'
+            # postmark: '%env(MAILER_DSN)%'
+            # sendgrid: '%env(MAILER_DSN)%'
             twilio: '%env(TWILIO_DSN)%'
-=======
-            sendgrid: '%env(MAILER_DSN)%'
->>>>>>> 37caec1e37e945f6c482a8a42503aea11ab64dea
+            # sendgrid: '%env(MAILER_DSN)%'
         channel_policy:
             # use chat/slack, chat/telegram, sms/twilio or sms/nexmo
             urgent: ['email']
