--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -3,7 +3,7 @@ vich_uploader:
 
     mappings:
         products:
-            uri_prefix: image/image_compte
+            uri_prefix: img/image_compte
             upload_destination: '%kernel.project_dir%/public/img/image_compte'
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
 
