--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ APP_SECRET=91431e1b0bcda74ee6509e83f0774645
 
 
 
-DATABASE_URL="mysql://root:@127.0.0.1:3306/e-city?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/e_city_final2?serverVersion=8&charset=utf8mb4"
 
 
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
