--- a/.env
+++ b/.env
@@ -42,5 +42,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://dhifallahdarine@gmail.com:pzznrmcosdcyzugx@smtp.gmail.com:465?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
