--- a/.env
+++ b/.env
@@ -62,6 +62,10 @@ MAILER_DSN=smtp://dhifallahdarine@gmail.com:pzznrmcosdcyzugx@smtp.gmail.com:465?
 WKHTMLTOPDF_PATH=/usr/local/bin/wkhtmltopdf
 WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
 ###< knplabs/knp-snappy-bundle ###
+# TWILIO_DSN=twilio://ACb7699b0b6314abd7941be7a60f5822b5:3dd1f2c145312185c33ce9f713c63eea@default?from=+19784867818
+# twilio_account_sid=ACb7699b0b6314abd7941be7a60f5822b5
+# twilio_auth_token=3dd1f2c145312185c33ce9f713c63eea
+# twilio_from_number=+19784867818
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
